--- a/.design/events-plugin-code/less/all.less
+++ b/.design/events-plugin-code/less/all.less
@@ -9,3 +9,8 @@
 // layouts and components
 @import 'layout';
 @import 'components/standalone/components';
+
+.aj__link {
+	display: inline-block;
+	padding: 8px 0;
+}
