--- a/.design/events-plugin-code/less/components/standalone/grid.less
+++ b/.design/events-plugin-code/less/components/standalone/grid.less
@@ -2,7 +2,7 @@
 	// ============================
     // barebones styles
     // ============================
-    // margin: 0 -15px;
+    margin: 0 -15px;
     &:after {
     	content: '';
     	display: table;
