--- a/.design/events-plugin-code/less/layout.less
+++ b/.design/events-plugin-code/less/layout.less
@@ -7,3 +7,7 @@
 .text-center {
 	text-align: center;
 }
+.container {
+	padding-left: 15px;
+	padding-right: 15px;
+}
